Fix horizontal and vertical scrollbars appearing on home page

--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ body {
   font-size: 0.9rem;
   text-align: center;
   color: white;
-  padding: 20px;
+  padding: 20px 0;
   width: 100%;
 }
 
